Fix projects css--make dates more visible

--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,7 @@ span {
 .project-entry {
   padding: 12.5px 5%;
 }
+\
 
 .project-entry,
 .project-overlay {
@@ -250,7 +251,7 @@ span {
 
 .overlay-fade-in .image-overlay-content {
   opacity: 0;
-  background-color: rgba(170, 161, 161, 0.4);
+  background-color: rgba(170, 161, 161, 0.7);
   transition: all 0.4s ease-in-out;
 }
 
